--- a/index.html
+++ b/index.html
@@ -1,9 +1,130 @@
-NPM Clone Nifty Penguin Magic npm Enterprise Products Solutions Resources Docs Support Search Join Log In Build amazing
-things Essential JavaScript development tools that help you go to market faster and build powerful applications using
-modern open source code. See plans Join for free Bring the best of open source to your company npm is the tool used by
-over 11,000,000 JavaScript developers around the world. Your developers already use it. Your company depends on it.
-Create an Org and get more out of the tools your team already knows and loves. Zero configuration Create an org, add
-your team, and start collaborating. Nothing to configure, set up, or manage. Team management Control who has access to
-what modules within your team namespace using straightforward team management capabilities. Familiar features npm Orgs
-has 100% parity with all the public npm registry features your developers already use. npm audit Enjoy the security
-auditing features built into the npm client, a zero-friction way to make open source software safer. Create an Org
+<!-- NPM Clone Nifty Penguin Magic npm Enterprise Products Solutions Resources Docs Support 
+
+*Search Join Log In 
+
+*Build amazing things 
+
+*Essential JavaScript development tools that help you go to market faster and build powerful applications using
+modern open source code. 
+
+*See plans 
+ Join for free 
+
+*Bring the best of open source to your company*
+
+*(SET)npm is the tool used by over 11,000,000 JavaScript developers around the world. Your developers already use it. Your company depends on it.
+Create an Org and get more out of the tools your team already knows and loves.
+
+Zero configuration 
+Create an org, add your team, and start collaborating. Nothing to configure, set up, or manage.
+
+Team management 
+Control who has access to what modules within your team namespace using straightforward team management capabilities.
+
+Familiar features npm Orgs has 100% parity with all the public npm registry features your developers already use. 
+
+npm audit 
+Enjoy the security auditing features built into the npm client, a zero-friction way to make open source software safer. 
+
+Create an Org -->
+
+
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="/lab-html-exercise/styles.css">
+    <title>Document</title>
+</head>
+
+<body>
+    <header>
+        <div>
+            <div>
+                <img class="blackHeart" src="images/black-heart.png" alt="black heart" />
+                <span> Nifty Penguin Magic </span>
+            </div>
+            <nav>
+                <ul>
+                    <li><a href="#"> npm Enterprise </a></li>
+                    <li><a href="#"> Products </a></li>
+                    <li><a href="#"> Solutions </a></li>
+                    <li><a href="#"> Resources </a></li>
+                    <li><a href="#"> Docs </a></li>
+                    <li><a href="#"> Support </a></li>
+                </ul>
+            </nav>
+        </div>
+        <div class="access">
+            <div>
+                <img class="npmLogo" src="/lab-html-exercise/images/npm-logo.png" alt="npm-logo" />
+            </div>
+            <form action="" class="searchArea">
+                <img class="magnifier" src="/lab-html-exercise/images/magnifying-glass.png" />
+                <input type="search" placeholder="Search packages" name="q">
+                <button class="searchButton" type="submit">Search</button>
+            </form>
+
+            <div class="accessButtons">
+                <button class="joinButton" type="submit">Join</button>
+                <button class="loginButton" type="submit">Log In</button>
+            </div>
+        </div>
+
+    </header>
+    <section id="welcome">
+        <h1 class="welcomeTitle">Build amazing things</h1>
+        <p class="welcomeText">Essential JavaScript development tools that help you go to market faster and build
+            powerful applications
+            using modern open source code.</p>
+        <div class="welcomeButtons">
+            <button type="button" class="seePlans">See plans</button>
+            <button type="button" class="joinFree">Join for free</button>
+        </div>
+    </section>
+    <section id="resources">
+        <img class="hexagon" src="/lab-html-exercise/images/triangle-hexagon.svg" alt="">
+        <h2 class="secondTitle">Bring the best of open source to your company</h2>
+        <p class="introText">npm is the tool used by over 11,000,000 JavaScript developers around the world. Your
+            developers
+            already use it. Your company depends on it. Create an Org and get more out of the tools your team
+            already knows and loves.</p>
+    </section>
+
+    <section id="outro">
+        <div class="container">
+            <div class="zeroConf">
+                <img class="pointer" src="/lab-html-exercise/images/zero-configuration.svg" alt="">
+                <h3 class="pointerTitle">Zero configuration</h3>
+                <h4 class="pointerText">reate an org, add your team, and start collaborating. Nothing to configure, set
+                    up, or manage.</h4>
+
+            </div>
+            <div class="mgmt">
+                <img class="team" src="/lab-html-exercise/images/team-management.svg" alt="">
+                <h3 class="teamTitle">Team management</h3>
+                <h4 class="teamText">Control who has access to what modules within your team namespace using
+                    straightforward team management capabilities.</h4>
+            </div>
+            <div class="familiar">
+                <img class="scale" src="/lab-html-exercise/images/familiar-features.svg" alt="">
+                <h3 class="scaleTitle">Familiar features</h3>
+                <h4 class="scaleText">npm Orgs has 100% parity with all the public npm registry features your developers
+                    already use.</h4>
+            </div>
+            <div class="npm">
+                <img class="bino" src="/lab-html-exercise/images/npm-audit.svg" alt="">
+                <h3 class="npmTitle">npm audit</h3>
+                <h4 class="npmText">Enjoy the security auditing features built into the npm client, a zero-friction way
+                    to make open source software safer.</h4>
+            </div>
+        </div>
+        <button class="outroButton" type="button">Create an Org</button>
+    </section>
+
+
+</body>
+
+</html>
